# auth-credentials-refresher

./: README.md  config.example.toml  pyproject.toml
src/: config.py  dodo_is_auth.py  http_client.py  models.py  office_manager.py  parsers.py
src/models/: __init__.py  account_login_config.py  account_login_form_data.py  connect_authorize_form_data.py  new_types.py  office_manager_account.py  roles.py  select_department_form_data.py  select_role_form_data.py  sign_in_oidc_form_data.py
src/parsers/: __init__.py  account_login_form_data.py  account_login_form_data_parser.py  connect_authorize_form_data.py  connect_authorize_form_data_parser.py  select_department_form.py  select_role_form.py  sign_in_oidc_form_data.py
tests/: conftest.py  fixtures.py  test_config.py  test_http_client.py  test_office_manager.py
tests/html/: account_login_form.html  connect_authorize_form.html  not_enough_roles.html  office_manager.html  select_department_form.html  select_role_form.html  sign_in_oidc_form.html
tests/test_dodo_is_auth/: test_send_account_login_form_data.py  test_send_connect_authorize_form_data.py
tests/test_office_manager/: test_go_to_office_manager_domain.py  test_send_select_department_form_data.py  test_send_select_role_form_data.py  test_send_sign_in_oidc_form_data.py
tests/test_parsers/: connect_authorize_form_data.html  test_account_login_form_parser.py  test_connect_authorize_form_parser.py  test_fill_account_login_form_data.py  test_office_manager_auth_form_parser.py  test_select_department_form_parser.py  test_select_role_form_parser.py  (+1 more)
